--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 <li>Also mentored CS students on various projects and technicalities.</li>
                             </ul>
                             <!--<a href="#" class="hire-me">Hire Me</a>-->
-                            <a href="Farhan_Resume.pdf" target="_blank">Download Resume</a>
+                            <a href="#" target="_blank">Download Resume</a>
                         </div>
                     </div>
                 </div>
@@ -354,7 +354,7 @@
                         <div class="bullet hidden-xs">
                         </div>
                         <div class="experience-content">
-                            <h3><span>BSES Delhi / March 2019 - Present</span></h3>
+                            <h3><span>BSES Delhi / March 2019 - January 2022</span></h3>
                             <p>
                                 <b>Work as a Associate - IT.</b>
                                 <ul style="list-style-type:square;">
@@ -723,7 +723,6 @@
                 <div class="contact col-sm-4">
                     <p>
                         <i class="fa fa-map-marker"></i><br>
-                        Jamia Nagar
                         New Delhi, India
                     </p>
                 </div>
@@ -766,7 +765,7 @@
             <div class="footer clearfix">
                 <a href="#">Farhan Raza</a>
                 <p>
-                    Copyright © 2019 All right reserved
+                    Copyright © 2022 All right reserved
                 </p>
             </div>
         </div>
