--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                         </div>
                         <div class="education-content">
                             <h3>Data Science</h3>
-                            <p>Numpy, Pandas, Seaborn, Scikit-Learn, Xgboost, NLP, MLP, CNN, Tensorflow, Keras</p>
+                            <p>Numpy, Pandas, Seaborn, Scikit-Learn, Xgboost, NLP, Tensorflow, OpenCV, CNN, Keras</p>
                         </div>
                     </div>
                     
